# electronics

./: CMakeLists.txt  Makefile  README.md  avr.cmake  run.bat  settings.cmake  winavr.cmake
include/lcd/: font_15x24.h  nokia_1202.h
src/: CMakeLists.txt  main.c
src/libdev/: CMakeLists.txt  ds18b20.c  ds18b20.h  mpl115a.c  mpl115a.h
src/liblcd/: CMakeLists.txt  font_5thagent12.h  font_5thagent12c.h  font_5thagent12n.h  font_5thagent24.h  font_5thagent24c.h  font_5thagent24n.h  nokia_1202.c  nokia_1202.h
src/liblcd/include/: font_15x24_5.h  nokia_1202.h
src/liblcd/src/: font.h  font_ostin16.h  nokia_1202.c  nokia_1202.h
src/libmath/: fixed.h  vector2d.h
src/libmenu/: CMakeLists.txt  main.c  menu.c  menu.h
src/libtwi/: CMakeLists.txt  twi_master.c  twi_master.h
src/menu/: main.c
src/src/: main.c
src/utils/: CMakeLists.txt  dbg_flash.h  dbg_uart.c  dbg_uart.h  ds1wire.c  ds1wire.h  twi_master.c  twi_master.h
src/velocomputer/: CMakeLists.txt  config.h.in  main.c
